# calculator-app

./: .bzrignore  .gitignore  AUTHORS  CMakeLists.txt  README  README-Autopilot.md  README-Developers.md  README-Mergeproposal.md  README-Translations.md  README-Unittest.md  README.md  README.translations  clickable.json  manifest.json.in  package-lock.json  package.json  snapcraft.yaml  ubuntu-calculator-app.apparmor  ubuntu-calculator-app.desktop
app/: CMakeLists.txt  Storage.qml  calculator-app.in  formula.js  ubuntu-calculator-app.desktop.in  ubuntu-calculator-app.desktop.in.in  ubuntu-calculator-app.in  ubuntu-calculator-app.qml
app/components/: CMakeLists.txt
app/engine/: CMakeLists.txt  CalculationHistory.qml  MathJs.qml  formula.js  math.js
app/graphics/: CMakeLists.txt
app/js/: math.js
app/tests/: CMakeLists.txt
app/tests/autopilot/: run
app/tests/autopilot/ubuntu-calculator-app/main/: test_main.py
app/tests/autopilot/ubuntu_calculator_app/: __init__.py
app/tests/autopilot/ubuntu_calculator_app/main/: test_main.py
app/tests/autopilot/ubuntu_calculator_app/tests/: __init__.py  test_main.py
app/ui/: ActionButton.qml  CMakeLists.txt  CalcHistory.qml  CalcKeyboard.qml  FavouritePage.qml  HelloTab.qml  HistoryModel.qml  KeyboardButton.qml  KeyboardPage.qml  LandscapeKeyboard.qml  Memory.qml  PortraiKeyboard.qml  PortraitKeyboard.qml  Screen.qml  ScrollableView.qml  SimplePage.qml  Walkthrough.qml  WorldTab.qml
app/upstreamcomponents/: CMakeLists.txt  EmptyState.qml  ListItemWithActions.qml  MultipleSelectionVisualModel.qml  PageWithBottomEdge.qml
app/welcomewizard/: CMakeLists.txt  Slide1.qml  Slide10.qml  Slide11.qml  Slide2.qml  Slide3.qml  Slide4.qml  Slide5.qml  Slide6.qml  Slide7.qml  Slide8.qml  Slide9.qml  SlideBase.qml  WelcomeWizard.qml
debian/: changelog  control  copyright  rules
po/: CMakeLists.txt  aa.po  af.po  am.po  ar.po  ast.po  az.po  be.po  bg.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  com.ubuntu.calculator.pot  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  gd.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  (+43 more)
setup/gui/: ubuntu-calculator-app.desktop
tests/: CMakeLists.txt
tests/autopilot/: CMakeLists.txt  run
tests/autopilot/ubuntu_calculator_app/: __init__.py
tests/autopilot/ubuntu_calculator_app/tests/: __init__.py  test_main.py
